# vexil

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  compiler.py  grammar.ebnf  justfile  noname.py  parser.py  parsy.py  pcomb.py  pyproject.toml  runtime.c  vexil.py
docs/: design.md
examples/: booleans.vx  classes.vx  enums_match.vx  factorial.vx  factorial_iter.vx  factorial_iter_for.vx  fibonacci.vx  floats.vx  functions.vx  hello.vx  imports.vx  imports_from_examples.vx  math2.vx  name.vx  option_error_handling.vx  result.vx  variables.vx
noname_examples/: add.noname  var.noname
stdlib/: math.vx
tests/: test_compiler.py  test_parser.py  test_pcomb.py
