[project]
name = "vexil"
version = "0.1.0"
description = "Programming language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.43.0",
]

[project.scripts]
vexil = "vexil:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = ["vexil.py", "compiler.py", "parser.py", "parsy.py", "runtime.c"]

[tool.hatch.build.targets.sdist]
include = ["vexil.py", "compiler.py", "parser.py", "parsy.py", "runtime.c", "examples", "tests", "grammar.ebnf", "README.md"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = "parsy.py"

[[tool.mypy.overrides]]
module = ["llvmlite", "llvmlite.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "I", "UP", "B", "SIM"]
